--- a/highlights/index.html
+++ b/highlights/index.html
@@ -2,22 +2,35 @@
 <html lang="en-us">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1"><meta name="robots" content="noindex, follow"/><title>All Tags - Titan Lee</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1"><meta name="robots" content="noodp"/><title> - Titan Lee</title>
         <meta name="twitter:card" content="summary_large_image"/><meta name="twitter:title" content=""/>
-        <meta name="twitter:description" content="Titan&#39;s Personal Site"/>
-        <meta name="Description" content="Titan&#39;s Personal Site"><meta property="og:title" content="Tags" />
-<meta property="og:description" content="Titan&#39;s Personal Site" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://DreamReaped.github.io/tags/" />
+        <meta name="twitter:description" content="Enter your personal description"/>
+        <meta name="Description" content="Enter your personal description"><meta property="og:title" content="" />
+<meta property="og:description" content="This text will be italic" />
+<meta property="og:type" content="article" />
+<meta property="og:url" content="https://DreamReaped.github.io/highlights/" /><meta property="article:section" content="" />
+
+
 
 <meta name="application-name" content="Titan Lee">
 <meta name="apple-mobile-web-app-title" content="Titan Lee"><link rel="shortcut icon" type="image/x-icon" href="https://DreamReaped.github.io/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="https://DreamReaped.github.io/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="https://DreamReaped.github.io/favicon-16x16.png">
         <link rel="icon" type="image/png" sizes="192x192" href="https://DreamReaped.github.io/android-chrome-192x192.png">
-        <link rel="icon" type="image/png" sizes="512x512" href="https://DreamReaped.github.io/android-chrome-512x512.png"><link rel="apple-touch-icon" sizes="180x180" href="https://DreamReaped.github.io/apple-touch-icon.png"><link rel="manifest" href="https://DreamReaped.github.io/site.webmanifest"><link rel="canonical" href="https://DreamReaped.github.io/tags/" /><link rel="alternate" href="https://DreamReaped.github.io/tags/index.xml" type="application/rss+xml" title="Titan Lee">
-    <link rel="feed" href="https://DreamReaped.github.io/tags/index.xml" type="application/rss+xml" title="Titan Lee"><link rel="stylesheet" href="https://DreamReaped.github.io/lib/normalize/normalize.min.css"><link rel="stylesheet" href="https://DreamReaped.github.io/css/style.min.css"><link rel="stylesheet" href="https://DreamReaped.github.io/lib/animate/animate.min.css"></head>
-    <body data-header-desktop="fixed" data-header-mobile="auto"><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : '' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
+        <link rel="icon" type="image/png" sizes="512x512" href="https://DreamReaped.github.io/android-chrome-512x512.png"><link rel="apple-touch-icon" sizes="180x180" href="https://DreamReaped.github.io/apple-touch-icon.png"><link rel="manifest" href="https://DreamReaped.github.io/site.webmanifest"><link rel="canonical" href="https://DreamReaped.github.io/highlights/" /><link rel="stylesheet" href="https://DreamReaped.github.io/lib/normalize/normalize.min.css"><link rel="stylesheet" href="https://DreamReaped.github.io/css/style.min.css"><link rel="stylesheet" href="https://DreamReaped.github.io/lib/animate/animate.min.css"><script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "BlogPosting",
+        "headline": "",
+        "inLanguage": "en-us",
+        "mainEntityOfPage": {
+            "@type": "WebPage",
+            "@id": "https:\/\/DreamReaped.github.io\/highlights\/"
+        },"genre": "page","wordCount":  5 ,
+        "url": "https:\/\/DreamReaped.github.io\/highlights\/","license": "Titan Lee ©","description": ""
+    }
+    </script></head>
+    <body data-header-desktop="" data-header-mobile=""><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : '' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
 
         <div id="mask"></div><div class="wrapper"><header>
     <div class="desktop header" id="header-desktop">
@@ -29,11 +42,11 @@
                 <nav>
                     <h2 class="display-hidden">Основная навигация</h2>
                     <ul class="menu-inner"><li>
+                            <a class="menu-item" href="https://DreamReaped.github.io/highlights"><br /> Highlights </a>
+                        </li><li>
                             <a class="menu-item" href="https://DreamReaped.github.io/"><br /> Home </a>
                         </li><li>
                             <a class="menu-item" href="https://DreamReaped.github.io/resume"><br /> Resume </a>
-                        </li><li>
-                            <a class="menu-item" href="https://DreamReaped.github.io/other-highlights"><br /> Other Highlights </a>
                         </li><li>
                             <a class="menu-item" href="https://DreamReaped.github.io/contact"><br /> Contact </a>
                         </li></ul>
@@ -55,11 +68,11 @@
             <div class="menu" id="menu-mobile"><nav>
                     <h2 class="display-hidden">Основная навигация</h2>
                     <ul><li>
+                            <a class="menu-item" href="https://DreamReaped.github.io/highlights" title=""><br />Highlights</a>
+                        </li><li>
                             <a class="menu-item" href="https://DreamReaped.github.io/" title=""><br />Home</a>
                         </li><li>
                             <a class="menu-item" href="https://DreamReaped.github.io/resume" title=""><br />Resume</a>
-                        </li><li>
-                            <a class="menu-item" href="https://DreamReaped.github.io/other-highlights" title=""><br />Other Highlights</a>
                         </li><li>
                             <a class="menu-item" href="https://DreamReaped.github.io/contact" title=""><br />Contact</a>
                         </li></ul>
@@ -69,7 +82,8 @@
                 </a></div>
         </div>
     </div></header><main class="main">
-                <div class="container"><div class="page archive"><h2 class="single-title pulse faster">Tags</h2><div class="tag-cloud-tags"></div></div></div>
+                <div class="container"><div class="page single special"><h1 class="single-title pulse faster"></h1><div class="content" id="content"><p><em>This text will be italic</em></p>
+</div></div></div>
                 </main><footer class="footer">
         <div class="footer-container"><div class="footer-line">Powered by <a href="https://gohugo.io/" target="_blank" rel="noopener noreffer" title="Hugo 0.82.1">Hugo</a> | Theme - <a href="https://ublogger.netlify.app/?utm_source=https://DreamReaped.github.io/&utm_medium=footer&utm_campaign=config&utm_term=2.0.1" target="_blank" title="uBlogger 2.0.1">uBlogger</a>
                 </div><div class="footer-line"><i class="svg-icon icon-copyright"></i><span>2021</span></div>
@@ -81,5 +95,5 @@
             </a><a href="#" id="view-comments" class="fixed-button" title="View Comments">
                 <i class="svg-icon icon-comments-fixed"></i>
             </a>
-        </aside><link rel="stylesheet" href="https://DreamReaped.github.io/lib/katex/katex.min.css"><link rel="stylesheet" href="https://DreamReaped.github.io/lib/katex/copy-tex.min.css"><script src="https://polyfill.io/v3/polyfill.min.js?features=Promise%2CObject.entries%2CObject.assign%2CElement.prototype.closest%2CrequestAnimationFrame%2CCustomEvent%2Chtml5shiv%2CObject.values%2Cfetch%2CElement.prototype.after"></script><script src="https://DreamReaped.github.io/lib/object-fit-images/ofi.min.js"></script><script src="https://DreamReaped.github.io/lib/smooth-scroll/smooth-scroll.min.js"></script><script src="https://DreamReaped.github.io/lib/clipboard/clipboard.min.js"></script><script src="https://DreamReaped.github.io/lib/katex/katex.min.js"></script><script src="https://DreamReaped.github.io/lib/katex/auto-render.min.js"></script><script src="https://DreamReaped.github.io/lib/katex/copy-tex.min.js"></script><script src="https://DreamReaped.github.io/lib/katex/mhchem.min.js"></script><script>window.config={"code":{"copyTitle":"Copy to clipboard","maxShownLines":10},"math":{"delimiters":[{"display":true,"left":"$$","right":"$$"},{"display":true,"left":"\\[","right":"\\]"},{"display":false,"left":"$","right":"$"},{"display":false,"left":"\\(","right":"\\)"}],"strict":false}};</script><script src="https://DreamReaped.github.io/js/theme.min.js"></script></body>
+        </aside><script src="https://DreamReaped.github.io/lib/smooth-scroll/smooth-scroll.min.js"></script><script src="https://DreamReaped.github.io/lib/clipboard/clipboard.min.js"></script><script>window.config={"code":{"copyTitle":"Copy to clipboard","maxShownLines":10},"comment":{}};</script><script src="https://DreamReaped.github.io/js/theme.min.js"></script></body>
 </html>
